# architect-api

./: Cargo.toml  DICTIONARY.md  README.md  build.rs  schema.json
benches/: order_id_benchmark.rs
schema/: Cargo.toml  build.rs
schema/builder/: Cargo.toml
schema/builder/src/: code_gen.rs  code_gen_types.rs  lib.rs  manual.rs  server.rs
src/: account.rs  account_manager.rs  channel_control.rs  config.rs  grpc.rs  lib.rs  misc.rs  system_control.rs  trader.rs  typed_message.rs
src/accounts/: account.rs  clearing_account.rs  mod.rs  trader.rs
src/algo/: builder.rs  chaser.rs  common_params.rs  generic_container.rs  mm.rs  mod.rs  pov.rs  quote_one_side.rs  release_at_time.rs  smart_order_router.rs  spreader.rs  take_and_chase.rs  twap.rs
src/auth/: grants.rs  jwt.rs  mod.rs  user_id.rs
src/boss/: mod.rs  protocol.rs
src/core/: mod.rs
src/cpty/: b2c2.rs  binance.rs  bybit.rs  cboe_digital.rs  coinbase.rs  coinbase_prime.rs  cpty_id.rs  cqg.rs  cumberland.rs  deltix.rs  deribit.rs  dydx.rs  falconx.rs  galaxy.rs  generic_external.rs  kalshi.rs  kraken.rs  mock.rs  mod.rs  okx.rs  paper.rs  sim.rs  wintermute.rs
src/folio/: mod.rs  schema.sql
src/grpc/: health.rs  mod.rs  msgpack_codec.rs
src/marketdata/: candle_width.rs  databento.rs  mod.rs  options_marketdata.rs  snapshots.rs
src/oms/: limits_file.rs  mod.rs
src/orderflow/: account.rs  algo.rs  cancel.rs  channel_authority.rs  fill.rs  mod.rs  modify.rs  order.rs  order_id.rs  order_id_authority.rs  order_types.rs
src/orderflow_v2/: cancel.rs  fill.rs  mod.rs  order.rs
src/qf/: mod.rs
src/symbology/: cficode.rs  cpty.rs  event_contract_series.rs  execution_info.rs  market.rs  mod.rs  options_series.rs  product.rs  product_catalog.rs  protocol.rs  query.pest  query.rs  route.rs  tradable_product.rs  venue.rs
src/symbology_v2/: event_contract_series.rs  execution_info.rs  marketdata_info.rs  metadata.rs  mod.rs  options_series.rs  product.rs  protocol.rs  tradable_product.rs  venue.rs
src/trading_activity/: mod.rs
src/utils/: account.rs  amount.rs  atomic_bitflags.rs  atomic_decimal.rs  bimap.rs  chrono.rs  component_id.rs  dir.rs  dir_pair.rs  duration.rs  envelope.rs  graphql_scalars.rs  half_open_range.rs  json_schema.rs  maybe_file.rs  messaging.rs  mod.rs  option_type.rs  packed_value.rs  pagination.rs  pool.rs  postgres.rs  price.rs  rate_limit.rs  secrets.rs  sequence.rs  str.rs  uuid_val.rs
src/utils/grpc/: any_codec.rs  auth.rs  json_codec.rs  mod.rs
