[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance", "cryptography::cryptocurrencies"]
description = "Architect.xyz Trading Platform API"
documentation = "https://docs.rs/architect-api"
edition = "2021"
homepage = "https://www.architect.xyz"
keywords = ["crypto", "hft", "trading", "finance"]
license = "AGPL-3.0-only"
name = "architect-api"
version = "1.0.15"

[features]
graphql = ["juniper"]
netidx = ["dep:netidx", "netidx-core", "netidx-derive"]

[dependencies]
anyhow = { workspace = true }
arcstr = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
compact_str = { workspace = true }
derive = { package = "architect-derive", version = "0.3.0", path = "../derive" }
derive_builder = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
enum_dispatch = { workspace = true }
enumflags2 = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
governor = { workspace = true }
juniper = { workspace = true, optional = true }
log = { workspace = true }
netidx = { workspace = true, optional = true }
netidx-core = { workspace = true, optional = true }
netidx-derive = { workspace = true, optional = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
postgres-types = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true, optional = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[dev-dependencies]
serde_yaml = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
