[package]
authors = ["Architect Financial Technologies LLC"]
categories = ["finance", "cryptography::cryptocurrencies"]
description = "Architect.xyz Trading Platform API"
documentation = "https://docs.rs/architect-api"
edition = "2021"
exclude = ["schema.json"]
homepage = "https://www.architect.xyz"
keywords = ["crypto", "hft", "trading", "finance"]
license = "AGPL-3.0-only"
name = "architect-api"
version = "11.0.5"

[features]
all = ["graphql", "grpc", "postgres"]
graphql = ["juniper"]
grpc = ["tonic", "tonic-build"]
postgres = ["postgres-types", "tokio-postgres"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytemuck = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true }
derive = { package = "architect-derive", version = "0.4.0", path = "../derive" }
derive_builder = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
ecow = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
governor = { workspace = true }
juniper = { workspace = true, optional = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
postgres-types = { workspace = true, optional = true }
rand = { workspace = true }
regex = { workspace = true }
# rmp = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true, optional = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
triomphe = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
insta = { workspace = true }
serde_yaml = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }

[build-dependencies]
schema_builder = { package = "architect-api-schema-builder", version = "0.4.0", path = "./schema/builder" }
tonic-build = { package = "architect-tonic-build", version = "0.13.1", path = "../vendor/tonic-build", optional = true }

[[bench]]
harness = false
name = "order_id_benchmark"

[package.metadata.cargo-machete]
ignored = [
    "schema_builder", # build.rs
    "tonic-build", # build.rs
]
