[package]
description = "Auxiliary crate for building architect-api"
edition = "2021"
license = "AGPL-3.0-only"
name = "architect-api-schema-builder"
version = "0.5.1"

[dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tonic-build = { package = "architect-tonic-build", version = "0.13.1", path = "../../../vendor/tonic-build" }
